--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@next/bundle-analyzer": "8.1.0",
     "@next/mdx": "8.1.0",
     "@reach/skip-nav": "0.1.2",
+    "@zeit/fetch": "5.1.1",
     "airtable": "0.7.2",
     "classnames": "^2.2.6",
     "cookie": "0.4.0",
@@ -43,6 +44,7 @@
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "2.2.0",
     "next": "9.1.2-canary.8",
+    "node-fetch": "2.6.0",
     "nprogress": "0.2.0",
     "passport": "0.4.0",
     "passport-github": "1.1.0",
@@ -57,6 +59,7 @@
     "@types/express": "4.17.0",
     "@types/jsonwebtoken": "8.3.2",
     "@types/node": "12.6.8",
+    "@types/node-fetch": "2.5.3",
     "@types/passport": "1.0.0",
     "@types/passport-github": "1.1.5",
     "@types/react": "16.8.23",
