Moved the page to use a query param for the path

--- a/now.json
+++ b/now.json
@@ -49,6 +49,10 @@
     {
       "src": "/feed.xml",
       "dest": "/_next/static/feed.xml"
+    },
+    {
+      "src": "/docs(?!/old)(.*)",
+      "dest": "/docs?slug=/docs$1"
     }
   ]
 }
