--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "js-cookie": "2.2.0",
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "2.2.0",
-    "next": "9.1.2-canary.8",
+    "next": "9.1.3-canary.1",
     "node-fetch": "2.6.0",
     "nprogress": "0.2.0",
     "passport": "0.4.0",
@@ -52,6 +52,11 @@
     "react": "16.10.1",
     "react-dom": "16.10.1",
     "react-virtualized": "^9.20.1",
+    "rehype-raw": "4.0.1",
+    "rehype-stringify": "6.0.0",
+    "remark-parse": "7.0.1",
+    "remark-rehype": "5.0.0",
+    "unified": "8.4.1",
     "unist-util-visit": "1.4.0"
   },
   "devDependencies": {
