--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "16.10.1",
     "react-virtualized": "^9.20.1",
     "rehype-raw": "4.0.1",
+    "rehype-sanitize": "3.0.0",
     "rehype-stringify": "6.0.0",
     "remark-parse": "7.0.1",
     "remark-rehype": "5.0.0",
