Handle relative and absolute URLs

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     }
   },
   "dependencies": {
-    "@mapbox/rehype-prism": "^0.3.0",
+    "@mapbox/rehype-prism": "0.3.1",
     "@mdx-js/loader": "0.20.3",
     "@mdx-js/mdx": "0.20.3",
     "@mdx-js/tag": "0.20.3",
@@ -58,7 +58,7 @@
     "remark-parse": "7.0.1",
     "remark-rehype": "5.0.0",
     "unified": "8.4.1",
-    "unist-util-visit": "1.4.0"
+    "unist-util-visit": "2.0.0"
   },
   "devDependencies": {
     "@types/airtable": "0.5.2",
