--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "passport-github": "1.1.0",
     "polished": "^2.0.3",
     "react": "16.10.1",
+    "react-autosuggest": "9.4.3",
     "react-dom": "16.10.1",
+    "react-instantsearch-dom": "6.0.0",
     "react-virtualized": "^9.20.1",
     "rehype-raw": "4.0.1",
     "rehype-sanitize": "3.0.0",
