--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@zeit/fetch": "5.1.1",
     "airtable": "0.7.2",
     "algoliasearch": "3.35.1",
+    "body-scroll-lock": "2.6.4",
     "classnames": "^2.2.6",
     "cookie": "0.4.0",
     "date-fns": "^1.29.0",
